--- a/res/xml/custom_clock_settings.xml
+++ b/res/xml/custom_clock_settings.xml
@@ -15,7 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="Statusbard Settings"
+        android:title="Statusbar Settings"
         >
 
 
