--- a/res/xml/custom_quickcolor_settings.xml
+++ b/res/xml/custom_quickcolor_settings.xml
@@ -17,50 +17,60 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="Quick Colors"
 	>
+	
+    
+   	<com.android.settings.ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_color"
+		android:title="Color"
+		android:summary="This color will be applied to every item that is checked"
+		android:defaultValue="#ff3fa2c7" 
+		alphaSlider="false" /> 	    
 
+
+	<Preference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_clear_all"
+		android:title="Clear All" 
+		/>
+   		
+   	
+   		
     <PreferenceCategory
 		android:title="B A T T E R Y   A N D   S I G N A L   I C O N S"
 		android:key="quickcolor_icons">
 
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild" 
-			android:key="icon_color"
-			android:title="Statusbar Signal Icons Color"
-			android:defaultValue="#ff3fa2c7" 
-			alphaSlider="false" /> 			
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_icon_color"
+		android:title="Signal Icons" 
+		android:defaultValue="false"	/>		
 
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild" 
-			android:key="battery_depleted_color"
-			android:title="Battery Depleted Level Color"
-			android:summary="Color for the depleted areas"
-			android:defaultValue="#ffababab" 
-			alphaSlider="false" />   	
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_battery_depleted_color"
+		android:title="Battery Depleted" 
+		android:defaultValue="false"	/>
 				
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild" 
-			android:key="battery_levels_color_one"
-			android:title="Battery Level One Color"
-			android:summary="Color for Max Level One"
-			android:defaultValue="#ffff0000" 
-			alphaSlider="false" />
-
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild" 
-			android:key="battery_levels_color_two"
-			android:title="Battery Level Two Color"
-			android:summary="Color for Max Level Two"
-			android:defaultValue="#ffff9000" 
-			alphaSlider="false" />	
-
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild" 
-			android:key="battery_levels_color_three"
-			android:title="Battery Level Three Color"
-			android:summary="Color for Min Level Three"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" />				
-			
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_battery_levels_color_one"
+		android:title="Battery Level One" 
+		android:defaultValue="false"	/>		
+		
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_battery_levels_color_two"
+		android:title="Battery Level Two" 
+		android:defaultValue="false"	/>			
+		
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_battery_levels_color_three"
+		android:title="Battery Level Three" 
+		android:defaultValue="false"	/>	
+		
+					
     </PreferenceCategory>
 
     
@@ -69,13 +79,12 @@
 		android:title="N A V I G A T I O N   B A R"
 		android:key="quickcolor_navbar">
    				
-		<com.android.settings.ColorPickerPreference
-	   		android:layout="?android:attr/preferenceLayoutChild"
-			android:key="nav_button_color"
-			android:title="Navigation Button Color"
-			android:defaultValue="#ffffffff"
-			alphaSlider="false" />
-		 
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_nav_button_color"
+		android:title="Navigation Button" 
+		android:defaultValue="false"	/>			
+				 
     </PreferenceCategory>
   
 
@@ -85,14 +94,12 @@
 		android:title="C L O C K"
 		android:key="quickcolor_clock">
 	
-   		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="clock_color"
-			android:title="Clock Color"
-			android:summary="Color for statusbar clock"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" /> 
- 
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_clock_color"
+		android:title="Clock" 
+		android:defaultValue="false"	/>	   		
+   		
     </PreferenceCategory>
 
     
@@ -102,54 +109,41 @@
 		android:title="S T A T U S B A R   P U L L D O W N"
 		android:key="quickcolor_pulldown">
    				
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="date_color"
-			android:title="Date Color"
-			android:summary="Color for statusbar date"	
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" /> 		
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_date_color"
+		android:title="Date" 
+		android:defaultValue="false"	/>			
+		
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_clear_button_color"
+		android:title="Clear All Button" 
+		android:defaultValue="false"	/>	        
         
-        <com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="clear_button_color"
-			android:title="Clear All Button Color"
-			android:summary="Color for clear all button"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" /> 	
-
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="close_bar_color"
-			android:title="Pulldown Handle Color"
-			android:summary="Color for statusbar pulldown handle"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" />         
-        
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="carrier_color"
-			android:title="Carrier Text Color"
-			android:summary="Color for the carrier text"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" /> 
-			
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="battery_label_color"
-			android:title="Battery Level Color"
-			android:summary="Color for the battery level"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" /> 
-			
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="temp_label_color"
-			android:title="Battery Temperature Color"
-			android:summary="Color for the battery temperature text"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" /> 
-			
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_close_bar_color"
+		android:title="Pulldown Handle" 
+		android:defaultValue="false"	/>			
+		
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_carrier_color"
+		android:title="Carrier" 
+		android:defaultValue="false"	/>			
+		
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_battery_label_color"
+		android:title="Battery Level" 
+		android:defaultValue="false"	/>			
+					
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_temp_label_color"
+		android:title="Battery Temperature" 
+		android:defaultValue="false"	/>	
 
 		 
     </PreferenceCategory>    
@@ -160,77 +154,59 @@
 		android:title="T O G G L E S"
 		android:key="quickcolor_toggles">
 
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggle_color"
-			android:title="Toggle Background Color"
-			android:summary="Color for toggles"
-			android:defaultValue="#ff272727" 
-			alphaSlider="false" /> 
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_color"
+		android:title="Toggle Background" 
+		android:defaultValue="false"	/>			
+				
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_icon_on_color"
+		android:title="Icon On" 
+		android:defaultValue="false"	/>				
 		
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggles_icon_on_color"
-			android:title="Icon On Color"
-			android:summary="Color for toggle icons when on"
-			android:defaultValue="#ff3792b4" 
-			alphaSlider="false" /> 
-
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggles_icon_inter_color"
-			android:title="Icon Intermediate Color"
-			android:summary="Color for toggle icons intermediate"
-			android:defaultValue="#ffff0000" 
-			alphaSlider="false" /> 
-
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggles_icon_off_color"
-			android:title="Icon Off Color"
-			android:summary="Color for toggle icons when off"
-			android:defaultValue="#ff555555" 
-			alphaSlider="false" />
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_icon_inter_color"
+		android:title="Icon Intermediate" 
+		android:defaultValue="false"	/>				
 		
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggle_ind_on_color"
-			android:title="Indicator On Color"
-			android:summary="Color for indicators (on)"
-			android:defaultValue="#ffffffff" 
-			alphaSlider="false" /> 
-
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild" 
-			android:key="toggle_ind_off_color"
-			android:title="Indicator Off Color"
-			android:summary="Color for indicators (off)"
-			android:defaultValue="#ff555555" 
-			alphaSlider="false" /> 			
-			
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggle_text_on_color"
-			android:title="Text Label On Color"
-			android:summary="Color for text label on"
-			android:defaultValue="#ffffffff" 
-			alphaSlider="false" />
-
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggle_text_off_color"
-			android:title="Text Label Off Color"
-			android:summary="Color for text label off"
-			android:defaultValue="#ff555555" 
-			alphaSlider="false" />
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_icon_off_color"
+		android:title="Icon Off" 
+		android:defaultValue="false"	/>				
+				
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_ind_on_color"
+		android:title="Indicator On" 
+		android:defaultValue="false"	/>				
 		
-		<com.android.settings.ColorPickerPreference
-			android:layout="?android:attr/preferenceLayoutChild"
-			android:key="toggle_divider_color"
-			android:title="Divider Color"
-			android:summary="Color for dividers"
-			android:defaultValue="#ff3b3b3b" 
-			alphaSlider="false" />	
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_ind_off_color"
+		android:title="Indicator Off" 
+		android:defaultValue="false"	/>		
+					
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_text_on_color"
+		android:title="Text On" 
+		android:defaultValue="false"	/>		
+		
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_text_off_color"
+		android:title="Text Off" 
+		android:defaultValue="false"	/>			
+				
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="qk_toggle_divider_color"
+		android:title="Divider" 
+		android:defaultValue="false"	/>				
 		
     </PreferenceCategory>         				
  
