--- a/res/xml/custom_charging_settings.xml
+++ b/res/xml/custom_charging_settings.xml
@@ -11,72 +11,52 @@
     <PreferenceCategory
 		android:title="C H A R G I N G   L E V E L   C O L O R S"
 		android:key="charge_color_ranges"
-		android:summary="Battery colors based on battery level"	>    
+		android:summary="Charging icon colors based on battery level"	>    
  
-    </PreferenceCategory>
- 	
-    <PreferenceCategory
-		android:title="M A X   L E V E L   O N E"
-		android:key="charge_max_level_one">     	
+
  	
 	<Preference
 	    android:layout="?android:attr/preferenceLayoutChild"
 		android:key="charge_levels_one"
-		android:title="Max Level"
+		android:title="Max Level One"
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
    
 	<com.android.settings.ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="charge_levels_color_one"
-		android:title="Level Color"
-		android:summary="Color for Max Level One"
-		android:defaultValue="#ffff0000" 
+		android:title="Max Level One Color"
+		android:summary="Color assigned from Max Level One down to 0"
+		android:defaultValue="#ff800000" 
 		alphaSlider="false" />
 
-	</PreferenceCategory>
- 	
-    <PreferenceCategory
-		android:title="M A X   L E V E L   T W O"
-		android:key="charge_max_level_two">
     	
 	<Preference
 	    android:layout="?android:attr/preferenceLayoutChild"
 		android:key="charge_levels_two"
-		android:title="Max Level"
+		android:title="Max Level Two"
 		android:summary="Maximimum level for the color"
 		android:defaultValue="30" />	
    
 	<com.android.settings.ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="charge_levels_color_two"
-		android:title="Level Color"
-		android:summary="Color for Max Level Two"
-		android:defaultValue="#ffff9000" 
+		android:title="Max Level Two Color"
+		android:summary="Color assigned from Max Level Two down to Max Level One"
+		android:defaultValue="#ffba6900" 
 		alphaSlider="false" />	
-   </PreferenceCategory>
 
-    <PreferenceCategory
-		android:title="M I N   L E V E L   T H R E E"
-		android:key="charge_max_level_three">    
-    	
-	<Preference
-	    android:layout="?android:attr/preferenceLayoutChild"
-		android:key="charge_levels_three"
-		android:title="Min Level"
-		android:summary="Minimum level for the color"
-		android:defaultValue="70" />	
    
 	<com.android.settings.ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="charge_levels_color_three"
-		android:title="Level Color"
-		android:summary="Color for Min Level Three"
-		android:defaultValue="#ff3792b4" 
+		android:title="Max Level Three Color"
+		android:summary="Color assigned from 100 down to Max Level Two"
+		android:defaultValue="#ff296c85" 
 		alphaSlider="false" />		
 
-    </PreferenceCategory>	
-		
+    
+    </PreferenceCategory>
 	
 
 </PreferenceScreen>
