--- a/res/xml/custom_color_settings.xml
+++ b/res/xml/custom_color_settings.xml
@@ -31,12 +31,29 @@
 
 		<com.android.settings.ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
-			android:key="battery_depleted_color"
-			android:title="Battery Depleted Level Color"
-			android:summary="Color for the depleted areas"
-			android:defaultValue="#ffababab" 
-			alphaSlider="false" />   	
+			android:key="depleted_levels_color_one"
+			android:title="Depleted Level One Color"
+			android:summary="Color assigned from Max Level One down to 0"
+			android:defaultValue="#ff800000" 
+			alphaSlider="false" />
+
+		<com.android.settings.ColorPickerPreference
+			android:layout="?android:attr/preferenceLayoutChild" 
+			android:key="depleted_levels_color_two"
+			android:title="Depleted Level Two Color"
+			android:summary="Color assigned from Max Level Two down to Max Level One"
+			android:defaultValue="#ffba6900" 
+			alphaSlider="false" />	
+		
+		<com.android.settings.ColorPickerPreference
+			android:layout="?android:attr/preferenceLayoutChild" 
+			android:key="depleted_levels_color_three"
+			android:title="Depleted Level Three Color"
+			android:summary="Color assigned from 100 down to Max Level Two"
+			android:defaultValue="#ff296c85" 
+			alphaSlider="false" />		
 				
+						
 		<com.android.settings.ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="battery_levels_color_one"
