Fix: Theme names not saving

--- a/res/xml/custom_theme_settings.xml
+++ b/res/xml/custom_theme_settings.xml
@@ -20,7 +20,7 @@
 
     <PreferenceCategory
 		android:title="T H E M E   P R E S E T S"
-		android:key="theme_one"
+		android:key="theme_presets_cat"
 		>    
     
 	<ListPreference
